--- a/Grafica_lab2.csproj
+++ b/Grafica_lab2.csproj
@@ -13,4 +13,10 @@
       <PackageReference Include="System.Windows.Forms.DataVisualization" Version="1.0.0-prerelease.20110.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Update="BitmapImageView.cs">
+        <SubType>Form</SubType>
+      </Compile>
+    </ItemGroup>
+
 </Project>
